# sqlx-sqlite-option-repro

./: Cargo.toml  README.md
migrations/: 20221025101330_create_foos_table.up.sql
src/: main.rs
