[package]
name = "sqlx-sqlite-option-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["chrono", "sqlite", "uuid", "offline", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.21.2", features = ["full"] }
