[package]
name = "sqlx-sqlite-option-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
sqlx = { version = "0.6.2", features = ["chrono", "sqlite", "macros", "runtime-tokio-rustls"] }
